[package]
name = "rust-gpujpeg"
version = "0.1.1"
edition = "2024"
description = "Rust bindings for GPU JPEG library"
license-file = "LICENSE"
repository = "https://github.com/spartajet/rust-gpujpeg"
homepage = "https://github.com/spartajet/rust-gpujpeg"

[dependencies]
anyhow = "1"
log = "0.4"

[build-dependencies]
bindgen = "0.71.1"
cmake = "0.1.54"
anyhow = "1"

[dev-dependencies]
opencv = { version = "0.94.4", features = [
    "clang-runtime",
    "imgcodecs",
    "imgproc",
] }

[features]
default = []
generate-bindings = []
